[tool.poetry]
name = "twint"
version = "0.1.0"
description = ""
authors = ["Muhammad Daffa Dinaya <13518141@std.stei.itb.ac.id>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "3.7.0"
aiodns = "^3.0.0"
beautifulsoup4 = "^4.10.0"
cchardet = "^2.1.7"
elasticsearch = "^8.0.1"
PySocks = "^1.7.1"
aiohttp-socks = "<=0.4.1"
schedule = "^1.1.0"
geopy = "^2.2.0"
fake-useragent = "^0.1.11"
pydantic = "^1.9.0"
psycopg2-binary = ">=2.9.1"
googletransx = "^2.4.2"
pandas = ">=0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
